--- a/IGoOut/res/layout/event.xml
+++ b/IGoOut/res/layout/event.xml
@@ -78,6 +78,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@id/event_menu"
+        android:background="@color/white"
         android:padding="@dimen/padding_normal" />
 
 </RelativeLayout>
