--- a/IGoOut/res/layout/event_header.xml
+++ b/IGoOut/res/layout/event_header.xml
@@ -25,7 +25,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="title"
-        android:paddingBottom="@dimen/padding_normal" />
+        android:paddingBottom="@dimen/padding_normal"
+        android:textSize="@dimen/text_size_big"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/event_location_name"
@@ -40,6 +42,11 @@
         android:layout_height="wrap_content"
         android:hint="title"
         android:paddingBottom="@dimen/padding_normal" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/grey" />
 
     <TextView
         android:id="@+id/event_start_time"
@@ -66,6 +73,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="@dimen/padding_normal"
-        android:text="@string/comments" />
+        android:text="@string/comments"
+        android:textSize="@dimen/text_size_big"
+        android:textStyle="bold" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/grey" />
 
 </LinearLayout>
