--- a/IGoOut/res/layout/event_list_item.xml
+++ b/IGoOut/res/layout/event_list_item.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="@dimen/padding_normal" >
+    android:orientation="vertical" >
 
     <TextView
         android:id="@+id/event_list_item_title"
