--- a/IGoOut/res/layout/location.xml
+++ b/IGoOut/res/layout/location.xml
@@ -2,6 +2,8 @@
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/location_event_list"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content"
+    android:background="@color/white"
+    android:padding="@dimen/padding_normal" >
 
 </ListView>
