--- a/IGoOut/res/layout/location_header.xml
+++ b/IGoOut/res/layout/location_header.xml
@@ -10,33 +10,35 @@
         android:id="@+id/location_img"
         android:layout_width="match_parent"
         android:layout_height="200dp"
+        android:paddingBottom="@dimen/padding_normal"
         android:scaleType="centerCrop" />
 
     <LinearLayout
         android:id="@+id/location_header_cont"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="@dimen/padding_normal" >
+        android:orientation="vertical" >
 
         <TextView
             android:id="@+id/location_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="@dimen/padding_normal" />
+            android:paddingBottom="@dimen/padding_normal"
+            android:textSize="@dimen/text_size_big"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/location_type"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textColor="@color/grey" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/location_header_details_cont"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="@dimen/padding_normal" >
+        android:orientation="vertical" >
 
         <TextView
             android:id="@+id/location_address"
@@ -73,12 +75,15 @@
         android:id="@+id/location_map"
         android:layout_width="match_parent"
         android:layout_height="200dp"
+        android:paddingBottom="@dimen/padding_normal"
         android:scaleType="centerCrop" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/padding_normal"
-        android:text="@string/events" />
+        android:paddingBottom="@dimen/padding_normal"
+        android:text="@string/events"
+        android:textSize="@dimen/text_size_big"
+        android:textStyle="bold" />
 
 </LinearLayout>
