--- a/IGoOut/res/values/colors.xml
+++ b/IGoOut/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="white">#FFFFFF</color>
      <color name="black">#000000</color>
+     <color name="grey">#5C5858</color>
 </resources>
