--- a/IGoOut/res/layout/home.xml
+++ b/IGoOut/res/layout/home.xml
@@ -1,7 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:padding="@dimen/padding_normal" >
 
     <Button
         android:id="@+id/home_interests"
